[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4", features = ["bson", "chrono"] }
async-graphql-actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-server = "2.1.1"
futures = "0.3"
actix-http = "3.1.0"
derive_more = "0.99.14"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4"] }
base64 = "0.13.0"
tokio-stream = "0.1.11"
slab = "0.4.7"
once_cell = "1.0"
async-stream = "0.3.0"
futures-util = "0.3.0"
serde_json = "1.0.87"