[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["jonahseguin", "bizarre"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.1"
console = "0.15.2"
subprocess = "0.2.9"